proxy/envoy_tmpl.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: omnition_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 15001 }
    listener_filters:
      name: envoy.listener.original_dst
    transparent: true
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: omnition
          codec_type: AUTO
          generate_request_id: true
          use_remote_address: true
          tracing:
            operation_name: egress
          route_config:
              name: http_route
              virtual_hosts:
              - name: http_vhost
                domains: ["*"]
                routes:
                - match:
                    prefix: "/"
                    headers:
                      - name: content-type
                        value: application/grpc
                  route: { cluster: http2_cluster }
                - match:
                    prefix: "/"
                  route: { cluster: http_cluster }
          http_filters:
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}

  clusters:
  - name: http_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB

  - name: http2_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB
    http2_protocol_options: {}

  - name: zipkin_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: ${ZIPKIN_HOST}
        port_value: ${ZIPKIN_PORT}

tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin_cluster
      collector_endpoint: "/api/v1/spans"
